--- a/api/package.json
+++ b/api/package.json
@@ -8,8 +8,16 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.6.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.8.7",
     "multer": "2.0.2",
     "node-fetch": "^3.3.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.0"
   }
 }
