--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.6.1",
     "express": "^4.18.2",
+    "bullmq": "^5.12.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.8.7",
     "multer": "2.0.2",
