--- a/api/package.json
+++ b/api/package.json
@@ -10,14 +10,15 @@
     "axios": "^1.7.2",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
+    "bullmq": "^5.12.1",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.18.2",
-    "bullmq": "^5.12.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.8.7",
     "multer": "2.0.2",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.0"
