--- a/worker/package.json
+++ b/worker/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.7.2",
     "bullmq": "^5.12.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.19.2",
     "form-data": "^4.0.0",
