--- a/api/package.json
+++ b/api/package.json
@@ -13,11 +13,12 @@
     "bullmq": "^5.12.1",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
-    "express": "^4.18.2",
+    "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.8.7",
     "multer": "2.0.2",
     "node-fetch": "^3.3.2",
+    "p-limit": "^6.2.0",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
