--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: "3.9"
 services:
   api:
     build: ./api
+    container_name: app_api
     ports:
       - "5000:5000"
     environment:
@@ -12,44 +13,36 @@ services:
       - ./uploads:/app/uploads
       - ./chunks:/app/chunks
     depends_on:
-      - worker1
-      - worker2
-      - worker3
       - mongo
+    restart: unless-stopped
 
   worker1:
     build: ./worker
     container_name: worker1
     environment:
       - OPENAI_API_KEY=${OPENAI_API_KEY}
-    ports:
-      - "5001:5001"
+    restart: unless-stopped
 
   worker2:
     build: ./worker
     container_name: worker2
     environment:
       - OPENAI_API_KEY=${OPENAI_API_KEY}
-    ports:
-      - "5002:5001"
+    restart: unless-stopped
 
   worker3:
     build: ./worker
     container_name: worker3
     environment:
       - OPENAI_API_KEY=${OPENAI_API_KEY}
-    ports:
-      - "5003:5001"
-  worker4:
-    build: ./worker
-    container_name: worker4
-    environment:
-      - OPENAI_API_KEY=${OPENAI_API_KEY}
-    ports:
-      - "5004:5001"
+    restart: unless-stopped
+
   mongo:
     image: mongo
-    restart: always
+    container_name: mongo
+    restart: unless-stopped
     command: ["mongod", "--quiet"]
+    volumes:
+      - ./mongo_data:/data/db
     ports:
       - "27018:27017"
