--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - "5000:5000"
     environment:
       - OPENAI_API_KEY=${OPENAI_API_KEY}
-      - MONGO_URI=mongodb://mongo:27017/loomia
+      - MONGO_URI=mongodb+srv://loomia:Aayush11711171@cluster0.cgjm2od.mongodb.net/loomiaDB?appName=Cluster0
     volumes:
       - ./uploads:/app/uploads
       - ./chunks:/app/chunks
