--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
     "bullmq": "^5.12.1",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
+    "rimraf": "6.1.2",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.8.7",
